your-spotify/network-policy-mongo-exporter-allow-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-exporter-allow-monitoring
  namespace: spotify
spec:
  podSelector:
    matchLabels:
      app: mongo-exporter
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 9216
